syntax = "proto3";
package yandex.cloud.priv.billing.v1alpha1;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/billing/v1alpha1;billing";


// https://wiki.yandex-team.ru/Balance/xmlrpc/#balance.getpassportbyuid
message Passport {
    string uid = 1;
    string login = 2;
    string name = 3;
    string client_id = 4;
    bool is_main = 5;
    repeated string limited_client_ids = 6;
    repeated string represented_client_ids = 7;
    message ServiceClientID {
      string service_id = 1;
      string client_id = 2;
    }
    repeated ServiceClientID service_client_ids = 8;
}
